--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -8,3 +8,5 @@ This page contains a roadmap for the development of FireEngine. It contains a li
 
   * DirectX 9, 10 and 11 Renderer implementing the `IRenderer` class.
   * Quake 3 .bsp map loader.
+  * Octree implementation for faster rendering.
+  * Improved FileSystem interface.
