--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -8,5 +8,10 @@ This page contains a roadmap for the development of FireEngine. It contains a li
 
   * DirectX 9, 10 and 11 Renderer implementing the `IRenderer` class.
   * Quake 3 .bsp map loader.
+
+= TODO =
+
   * Octree implementation for faster rendering.
   * Improved FileSystem interface.
+  * Improve MD3 file loading to support .skin and animation.cfg files.
+  * Improve TGA file loading (some are showing up a bit strangely)
